2003-03-18  Jordi Mallach  <jordi@sindominio.net>

	* configure.in (ALL_LINGUAS): Added "ja" (Japanese).

2003-03-17  Daniel Carbonell Fraj  <bocata@panete.net>

	* src/partyline.c (partyline_add_channel): changed the parsing code, so 
	now it can parse the lines sent by the tetrinet java server.

	* src/tetrinet.c (tetrinet_inmessage): added support for the
	tetrinet java server.

2003-03-17  Jordi Mallach  <jordi@sindominio.net>

	* TODO: Updated for 0.7.0.
	* configure.in: released gtetrinet 0.7.0.

2003-03-17  Jordi Mallach  <jordi@sindominio.net>

	* src/fields.c (gmsginput_activate): Patch from Robert Cheramy, to
	workaround segfaults when trying to input characters not supported
	by the current locale.
	* src/partyline.c (textentry): Likewise.

	* AUTHORS, TODO: Updated.
	* README: Changed contact address.

2003-03-17  Jordi Mallach  <jordi@sindominio.net>

	* configure.in (ALL_LINGUAS): Added "ru" (Russian).

2003-03-16  Christophe Merlet  <redfox@redfoxcenter.org>

	* configure.in: Added "fr" (French) to ALL_LINGUAS.

2003-03-14  Yuriy Syrota <rasta renome.rovno.ua>

	* configure.in: Added "uk" (Ukrainian) to ALL_LINGUAS.

2003-03-08  Evandro Fernandes Giovanini <evandrofg@ig.com.br>

	* configure.in: Added "pt_BR" (Brazilian Portuguese) to ALL_LINGUAS.

2003-03-05  Duarte Loreto <happyguy_pt@hotmail.com>

        * configure.in: Added "pt" to ALL_LINGUAS.

2003-03-03  James Antill  <james@and.org>

	* src/tetrinet.c (tetrinet_sendfield): Put a warning in if blocks are
	out of range.
	(tetrinet_old_sendfield): Add checking code

2003-02-24  Dani Carbonell  <bocata@panete.net>

	* src/partyline.c (stop_list): list_issued is a integer, changed
	accordingly.
	(partyline_update_channel_list): if there is another channel list
	update in progress, do nothing. This will prevent us from being
	kicked from the server because of flood.
	
	* src/tetrinet.c (tetrinet_inmessage): fixed the stupid bug that 
	prevented the channel list from working in tetrinet.org.
